examples/error/illegal_main.rx
function string main(list lst) {

}